zeebe-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    meta.helm.sh/release-name: dev
    meta.helm.sh/release-namespace: default
  creationTimestamp: "2023-09-28T11:23:28Z"
  generation: 1
  labels:
    app: camunda-platform
    app.kubernetes.io/component: zeebe-gateway
    app.kubernetes.io/instance: dev
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: zeebe-gateway
    app.kubernetes.io/part-of: camunda-platform
    app.kubernetes.io/version: 8.2.13
    helm.sh/chart: zeebe-gateway-8.2.13
  name: dev-zeebe-gateway
  namespace: default
  resourceVersion: "179873"
  uid: 8e58144a-5687-40a4-8c2a-402fa1a50f95
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: camunda-platform
      app.kubernetes.io/component: zeebe-gateway
      app.kubernetes.io/instance: dev
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: zeebe-gateway
      app.kubernetes.io/part-of: camunda-platform
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: camunda-platform
        app.kubernetes.io/component: zeebe-gateway
        app.kubernetes.io/instance: dev
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: zeebe-gateway
        app.kubernetes.io/part-of: camunda-platform
        app.kubernetes.io/version: 8.2.13
        helm.sh/chart: zeebe-gateway-8.2.13
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app.kubernetes.io/component
                operator: In
                values:
                - zeebe-gateway
            topologyKey: kubernetes.io/hostname
      containers:
      - env:
        - name: ZEEBE_STANDALONE_GATEWAY
          value: "true"
        - name: ZEEBE_GATEWAY_CLUSTER_CLUSTERNAME
          value: dev-zeebe
        - name: ZEEBE_GATEWAY_CLUSTER_MEMBERID
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.name
        - name: ZEEBE_LOG_LEVEL
          value: info
        - name: JAVA_TOOL_OPTIONS
          value: -XX:+ExitOnOutOfMemoryError
        - name: ZEEBE_GATEWAY_CLUSTER_CONTACTPOINT
          value: dev-zeebe:26502
        - name: ZEEBE_GATEWAY_NETWORK_HOST
          value: 0.0.0.0
        - name: ZEEBE_GATEWAY_NETWORK_PORT
          value: "26500"
        - name: ZEEBE_GATEWAY_CLUSTER_HOST
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: status.podIP
        - name: ZEEBE_GATEWAY_CLUSTER_PORT
          value: "26502"
        - name: ZEEBE_GATEWAY_MONITORING_HOST
          value: 0.0.0.0
        - name: ZEEBE_GATEWAY_MONITORING_PORT
          value: "9600"
        - name: ZEEBE_GATEWAY_SECURITY_AUTHENTICATION_IDENTITY_TYPE
          value: keycloak
        - name: ZEEBE_GATEWAY_SECURITY_AUTHENTICATION_MODE
          value: identity
        - name: ZEEBE_GATEWAY_SECURITY_AUTHENTICATION_IDENTITY_ISSUERBACKENDURL
          value: http://dev-keycloak:80/auth/realms/camunda-platform
        - name: ZEEBE_GATEWAY_SECURITY_AUTHENTICATION_IDENTITY_AUDIENCE
          value: zeebe-api
        - name: JAVA_TOOL_OPTIONS
          value: -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:8000
        image: camunda/zeebe:8.2.13
        imagePullPolicy: IfNotPresent
        name: zeebe-gateway
        ports:
        - containerPort: 9600
          name: http
          protocol: TCP
        - containerPort: 26500
          name: gateway
          protocol: TCP
        - containerPort: 26502
          name: internal
          protocol: TCP
        - containerPort: 8000
          name: debug
          protocol: TCP
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /actuator/health
            port: 9600
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 400m
            memory: 450Mi
          requests:
            cpu: 400m
            memory: 450Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 484
          name: dev-zeebe-gateway-gateway
        name: config
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2023-09-28T11:25:33Z"
    lastUpdateTime: "2023-09-28T11:25:33Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2023-09-28T11:23:29Z"
    lastUpdateTime: "2023-09-28T11:25:33Z"
    message: ReplicaSet "dev-zeebe-gateway-599f77b44c" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
